[gd_scene load_steps=10 format=3 uid="uid://cwn24ve2vleu"]

[ext_resource type="Script" uid="uid://jlxc2njt7exi" path="res://Scripts/network_tasks_panel.gd" id="1_mmt3q"]
[ext_resource type="Shader" uid="uid://btgs8r3ipldd5" path="res://Shaders/task_panel.gdshader" id="2_mmt3q"]
[ext_resource type="FontFile" uid="uid://8m7k3wp540ss" path="res://Fonts/tahoma-8pt-bold-windows-xp.ttf" id="3_5n4yc"]
[ext_resource type="Texture2D" uid="uid://cp6q2gjrtasgr" path="res://Icons/sprb040D.dll_14_2020_1037-0.png" id="4_5n4yc"]
[ext_resource type="FontFile" uid="uid://cwih7em0ui2i2" path="res://Fonts/windows-xp-tahoma.ttf" id="4_u6hvu"]
[ext_resource type="Texture2D" uid="uid://bum4kfk435a2v" path="res://Icons/sprb040D.dll_14_2026_1037-2.png" id="6_5n4yc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_upojo"]
shader = ExtResource("2_mmt3q")
shader_parameter/top_color = Color(1, 1, 1, 1)
shader_parameter/bottom_color = Color(0.584314, 0.741176, 0.894118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uds7w"]
corner_radius_top_left = 2
corner_radius_top_right = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upojo"]
bg_color = Color(0.701961, 0.815686, 0.92549, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
anti_aliasing = false

[node name="TaskPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mmt3q")

[node name="Title" type="Panel" parent="."]
material = SubResource("ShaderMaterial_upojo")
layout_mode = 0
offset_right = 169.0
offset_bottom = 24.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uds7w")

[node name="Label" type="RichTextLabel" parent="Title"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 122.0
offset_bottom = 18.0
theme_override_colors/default_color = Color(0.129412, 0.352941, 0.807843, 1)
theme_override_fonts/bold_font = ExtResource("3_5n4yc")
theme_override_font_sizes/bold_font_size = 11
bbcode_enabled = true
text = "[b]Network Tasks"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 169.0
offset_bottom = 124.0
theme_override_styles/panel = SubResource("StyleBoxFlat_upojo")

[node name="Refresh" type="Control" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 36.0
offset_right = 156.0
offset_bottom = 55.0

[node name="RefreshIcon" type="TextureRect" parent="Refresh"]
layout_mode = 0
offset_left = -3.0
offset_top = 1.0
offset_right = 16.0
offset_bottom = 17.0
texture = ExtResource("4_5n4yc")
expand_mode = 1
stretch_mode = 5

[node name="RefreshLabel" type="RichTextLabel" parent="Refresh"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 22.0
offset_right = 131.0
offset_bottom = 16.0
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0.145098, 0.364706, 0.811765, 1)
theme_override_fonts/normal_font = ExtResource("4_u6hvu")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Refresh network list"

[node name="SetupWireless" type="Control" parent="."]
anchors_preset = 0
offset_left = 3.0
offset_top = 80.0
offset_right = 162.0
offset_bottom = 114.0

[node name="SetupWirelessIcon" type="TextureRect" parent="SetupWireless"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 20.0
offset_bottom = 19.0
texture = ExtResource("6_5n4yc")
expand_mode = 1
stretch_mode = 5

[node name="SetupWirelessLabel" type="RichTextLabel" parent="SetupWireless"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 26.0
offset_top = 2.0
offset_right = 154.0
offset_bottom = 36.0
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0.145098, 0.364706, 0.811765, 1)
theme_override_fonts/normal_font = ExtResource("4_u6hvu")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Set up a wireless network for a home or small office"

[connection signal="mouse_entered" from="Refresh/RefreshLabel" to="." method="_on_refresh_mouse_entered"]
[connection signal="mouse_exited" from="Refresh/RefreshLabel" to="." method="_on_refresh_mouse_exited"]
[connection signal="mouse_entered" from="SetupWireless/SetupWirelessLabel" to="." method="_on_setup_wireless_mouse_entered"]
[connection signal="mouse_exited" from="SetupWireless/SetupWirelessLabel" to="." method="_on_setup_wireless_mouse_exited"]
